feat: :sparkles: first and second consulte ended

--- a/index.html
+++ b/index.html
@@ -148,7 +148,11 @@
             </div>
         </nav>
         <section class="main__section">
-            <article class="section__item__1">Caja 1</article>
+            <article class="section__item__1">
+                <div class="container">
+
+                </div>
+            </article>
             <article class="section__item__2">Caja 2</article>
             <article class="section__item__3">Caja 3</article>
             <article class="section__item__4">Caja 4</article>
