feat: :sparkles: intentando tocar los otros json y arreglando un poco el diseno

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     </main>
     <footer>
         <div class="footerline"></div>
-        <img src="storage/img/footercontainerc.png" class="footercontainer">
+        <img src="storage/img/icons/iconos/footercontainerc.png" class="footercontainer">
 
 
         <div class="footerleft">
@@ -107,47 +107,47 @@
         <div class="footercenter">
 
             <div class="centericon">
-                <img src="storage/img/rocket.svg">
+                <img src="storage/img/icons/iconos/rocket.svg">
                 <p>Overview</p>
             </div>
 
             <div class="centericon">
-                <img src="storage/img/person.svg">
+                <img src="storage/img/icons/iconos/person.svg">
                 <p>Life</p>
             </div>
 
             <div class="centericon">
-                <img src="storage/img/comms.svg">
+                <img src="storage/img/icons/iconos/comms.svg">
                 <p>Comms</p>
             </div>
 
             <div class="centericon">
-                <img src="storage/img/Prop.svg">
+                <img src="storage/img/icons/iconos/prop.svg">
                 <p>Prop</p>
             </div>
 
             <div class="centericon">
-                <img src="storage/img/Mech.svg">
+                <img src="storage/img/icons/iconos/mech.svg">
                 <p>Mech</p>
             </div>
 
             <div class="centericon">
-                <img src="storage/img/power.svg">
+                <img src="storage/img/icons/iconos/power.svg">
                 <p>Power</p>
             </div>
 
             <div class="centericon">
-                <img src="storage/img/Avionics.svg">
+                <img src="storage/img/icons/iconos/Avionics.svg">
                 <p>Avionics</p>
             </div>
 
             <div class="centericon">
-                <img src="storage/img/GNC.svg">
+                <img src="storage/img/icons/iconos/GNC.svg">
                 <p>GNC</p>
             </div>
 
             <div class="centericon">
-                <img src="storage/img/Thermal.svg">
+                <img src="storage/img/icons/iconos/thermal.svg">
                 <p>Thermal</p>
             </div>
 
