feat: :sparkles: creando otra vez los toques finales

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 </div>
                 <div id="section__image" class="section__image">
                     <div class="rocket">
-                        <img class="rocketimg" src="../storage/img/icons/iconos/astronauta.png">
+                        <img class="rocketimg" src="../storage/img/icons/iconos/astronauta.wepp">
                     </div>
                 </div>
                 <div class="section__information__3">
